@@ -35,6 +35,7 @@
 - added: `SchemaOptions.stop()` alias to `$.model.$stop()`
 - added: a new route flag type `&group` something like `roles` but groups aren't evaluated
 - added: `route.groups` with defined groups
+- added: NoSQL `database.listing([view])` which generates a listing response
 - added: `DatabaseBuilder.insert(fn(doc))` can modify a document after `update` or `modify` has `insert` mode
 - added: `DatabaseBuilder.query(code)` can contain a raw JS condition in the form e.g. `doc.age > 18 && doc.age < 33`
 - added: `DatabaseBuilder.regexp(name, regexp)` RegExp search in strings
